# snipersight-trading

./: .coverage.claude.pid285.Xuroqa9x.Hi71GCHMNDwh  .dockerignore  .env.example  .env.local.example  .flake8  .gitattributes  .gitignore  .graphifyignore  .pyre_configuration  .spark-initial-sha  API_ADDITIONS.md  ARCHITECTURE.md  ARCHIVE.md  BACKEND_INTEGRATION_COMPLETE.md  BTCCycleIntel.tsx  BULK_PRICES_AND_BACKGROUND_SCAN.md  CLAUDE.md  COPILOT_BUILD_GUIDE.md  DEBUG_CHECKLIST.md  DESIGN.md  Dockerfile.backend  Dockerfile.frontend  FIXES_APPLIED.md  FULL_PIPELINE_INTEGRATION.md  HOW_TO_GET_CONFLUENCE_BREAKDOWN.md  HTF_ALIGNMENT_FIX_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  MARKET_REGIME_LENS_DOCS.md  MarketCyclesBriefV2.tsx  PHASE3_COMPLETE.md  PHASE4_IMPLEMENTATION.md  PHASE4_STEP_BY_STEP.md  PHASE6_COMPLETE.md  PRD.md  PRICE_INTEGRATION.md  PRODUCT.md  PROJECT_STRUCTURE.md  Procfile  QUICKSTART.md  README.md  (+97 more)
.claude/: AUDIT_RUBRIC.md  ROUTER.md  launch.json  settings.json  settings.local.json
.github/: copilot-instructions.md  copilot-instructions.md.backup
.storybook/: main.ts  preview.ts
backend/: api.py  api_DEPRECATED.py  api_server.py  cli.py  test_api.py
diagnostics/: diag.txt  fvg_diag_1h.txt  fvg_diag_1m.txt  fvg_diag_4h.txt  fvg_diag_doge.txt  fvg_diag_eth.txt  fvg_diag_sol.txt  fvg_diagnostic_report.txt  ob_diag_1h.txt  ob_diag_4h.txt  ob_diag_5m.txt  output.txt  reversal_diagnostic_report.txt  sweep_diag_15m.txt  sweep_diag_all.txt
docs/: CYCLE_TRANSLATION_SYSTEM.md  INTEGRATION_GUIDE.md  SMC_PIPELINE_REFACTOR.md  TELEMETRY_GUIDE.md  api_contract.md  (+6 more)
(+917 files in other folders)
